# AdaEngine

./: .bazelrc  .gitattributes  .gitignore  .package.resolved  .spi.yml  .swiftlint.yml  AGENTS.md  AUTHORS.md  BUILD.bazel  Bundler.toml  CONTRIBUTING.md  LICENSE  MODULE.bazel  Makefile  Package.resolved  Package.swift  README.md  SLOPPY.md  WORKSPACE.bazel  Workspace.swift  premake5.lua  vkvia.html
Modules/SPIRV-Cross/: .gitignore  BUILD  MODULE.bazel  Package.swift  WORKSPACE
Modules/glslang/: BUILD  MODULE.bazel  Package.swift  WORKSPACE
Modules/glslang/SPIRVCompiler/: spirv_compiler.cpp
Modules/msdf-atlas-gen/: .bazelrc  .gitignore  BUILD  MODULE.bazel  Package.swift  WORKSPACE
Modules/msdf-atlas-gen/AtlasFontGenerator/: AtlasFontGenerator.cpp  AtlasFontGenerator.h  BUILD.bazel  FontHolder.h  atlas_font_gen.c  atlas_font_gen.cpp  module.modulemap
Modules/msdf-atlas-gen/msdf-atlas-gen/: GlyphGeometry.h  module.modulemap
Modules/msdf-atlas-gen/msdfgen/: module.modulemap
Modules/msdf-atlas-gen/tinyxml/: module.modulemap  tinyxml2.h
Sources/AdaCorePipelines/: BUILD.bazel
Sources/AdaCorePipelines/CorePipelines/: Core2DPlugin.swift  Core3DPlugin.swift  GlassRenderPipeline.swift  UIRenderPipelines.swift  Upscaling.swift
Sources/AdaECS/: BUILD.bazel  DebugBenchmarkLog.swift  ECSMacros.swift  Environments+ECS.swift  RuntimeIntrospection.swift  Scheduler.swift  TypeNameCache.swift
Sources/AdaECS/Commands/: Commands.swift
Sources/AdaECS/Component/: Bundle.swift  Component+Runtime.swift  Component.swift  ComponentsBuilder.swift  EditorComponentReflection.swift  RelationshipComponent.swift  Resource.swift
Sources/AdaECS/Entity/: Entity+ComponentSet.swift  Entity.swift  Query.swift
Sources/AdaECS/Events/: Events.swift  EventsSender.swift  World+Events.swift
Sources/AdaECS/Query/: ChangeDetectionable.swift  ChunkQuery.swift  EntityQuery.swift  LocalIsolated+SystemQuery.swift  ParallelQueryResult.swift  Query.swift  QueryBuilder.swift  QueryFilter.swift  QueryPredicate.swift  QueryResult.swift  QueryTarget.swift  Ref.swift  ResQuery.swift  ResourceQuery.swift  SystemQuery.swift
Sources/AdaECS/System/: System+Runtime.swift  System.swift  SystemAccessSet.swift  SystemDependency.swift  SystemsGraph.swift  SystemsGraphExecutor.swift
Sources/AdaECS/World/: Archetype.swift  BlobArray.swift  Chunks.swift  Storage.swift  World+RuntimeIntrospection.swift  World+Storages.swift  World.swift  WorldPlugin+Runtime.swift  WorldPlugin.swift
Sources/AdaEditor/: AdaEditorApp.swift  Application.swift  BUILD.bazel  GameScene.swift  Layer.swift  Project.swift  SDLWindow.swift  main.swift
Sources/AdaEditor/AdaEngine.xcodeproj/: project.pbxproj
Sources/AdaEditor/Assets/: Subscene.ascn  TestTileMap.ldtk  circle.glsl  circle.glsl.spv  custom_material.glsl
Sources/AdaEditor/Components/: EditorCamera.swift
Sources/AdaEditor/Scenes/: BunnyExampleScene.swift  GameScene2D.swift  GameScene3D.swift  SpaceInvaders.swift  TilemapScene.swift  TransformEntChildrenScene.swift  UITestScene.swift  UIViewTestScene.swift
Sources/AdaEngine/: AdaEngine.swift  BUILD.bazel  DefaultAppWindow.swift  DefaultPlugins.swift  DefaultScenePlugin.swift  Exported.swift  GameLoop.swift  Project.swift  Time.swift
Sources/AdaEngineEmbeddable/: BUILD.bazel
Sources/AdaEngineMacros/: AdaEngineMacrosPlugin.swift  BUILD.bazel  BundleMacro.swift  ComponentMacro.swift  EntryMacro.swift  Extensions.swift  MacroError.swift  PreviewableMacro.swift  StateMacro.swift  SystemMacro.swift
Sources/AtlasFontGenerator/: AtlasFontDescriptor.cpp  AtlasFontDescriptor.h  AtlasFontGenerator.cpp  AtlasFontGenerator.h  BUILD.bazel  FontHolder.cpp  FontHolder.h  Project.swift  atlas_font_gen.cpp  atlas_font_gen.h  module.modulemap
Sources/CVulkan/: BUILD.bazel  Project.swift  cvulkan.h  module.modulemap  vulkan.pc
Sources/Math/: AABB.swift  Angle.swift  BUILD.bazel  Math.swift  PointInt.swift  Project.swift  Quat.swift  Ray.swift  Rect.swift  RectInt.swift  Size.swift  SizeInt.swift  Transform.swift  Transform2D.swift  Transform3D.swift  Vector2.swift
Sources/box2d/: BUILD.bazel  Project.swift
Tests/AdaECSTests/: ArchetypeTests.swift  BUILD.bazel  ChunkTests.swift  ConcurrencyTests.swift  EditorComponentReflectionTests.swift  Misc.swift  MultiThreadedSystemsGraphExecutorTests.swift  QueryTests.swift  ShedulersTests.swift  SystemMacroTests.swift  WorldTests.swift
Tests/AdaEngineTests/: AdaEngineTests.swift  AdaUIDebug3DTests.swift  BUILD.bazel  FixedTimestamp.swift  FixedTimestepTests.swift  GamepadInputTests.swift  Physics2DTests.swift  SceneViewTests.swift  TestApplication.swift  VisionOSPlatformCompileGuardsTests.swift  WindowGroupFramePacingTests.swift  WindowSceneModifierTests.swift
Tests/AdaUITests/: AdaColorPaletteTests.swift  AdaUILayoutOptimizationTests.swift  AlertModifierTests.swift  AnimationTests.swift  AspectRatioModifierTests.swift  BUILD.bazel  ButtonStyleTests.swift  ContextMenuModifierTests.swift  EnvironmentPropagationTests.swift  FlexibleFrameTests.swift  FocusRoutingTests.swift  GestureTests.swift  GridLayoutTests.swift  HotReloadViewTests.swift  KeyboardShortcutTests.swift  LazyVStackTests.swift  LinearGradientTests.swift  LiquidGlassTests.swift  MacOSTextInputFilterTests.swift  MenuBarModifierTests.swift  NavigationSplitViewAnimationTests.swift  NavigationTests.swift  OffscreenViewportTests.swift  PreviewableTests.swift  RenderingClipTests.swift  RootLayoutTests.swift  SearchableTests.swift  ShaderEffectModifierTests.swift  ShapeRenderingTests.swift  SwiftUILayoutOracleTests.swift  TabContainerTests.swift  TestApplication.swift  TextEditorTests.swift  TextFieldTests.swift  TextMarkdownTests.swift  TextRenderingRegressionTests.swift  TimelineViewTests.swift  UIWindowInputRoutingTests.swift  ViewHitTests.swift  ViewIdentityTests.swift  (+5 more)
Tests/MathTests/: BUILD.bazel  Transform2DRegressionTests.swift  Transform2DTests.swift  Transform3DTests.swift  Utils.swift  Vector2Tests.swift  VectorLiteralTests.swift
utils/bazel/: BUILD.bazel  cc_ada_library.bzl  swift_ada_binary.bzl  swift_ada_library.bzl
(+6206 files in other folders)
