load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@build_bazel_rules_swift//swift:swift.bzl", "swift_compiler_plugin")
load("@cgrindel_bazel_starlib//bzltidy:defs.bzl", "tidy")
load("//utils/bazel:cc_ada_library.bzl", "cc_ada_library")
load("//utils/bazel:swift_ada_library.bzl", "swift_ada_library")

package(default_visibility = ["//visibility:public"])

tidy(
    name = "tidy",
    targets = [
        ":update_build_files",
    ],
)

# Swift Package Manager
# gazelle:exclude .build

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@rules_swift_package_manager//gazelle",
    ],
    visibility = ["//:__subpackages__"],
)

gazelle(
    name = "update_build_files",
    data = [
        "@swift_deps_info//:swift_deps_index",
    ],
    extra_args = [
        "-swift_dependency_index=$(location @swift_deps_info//:swift_deps_index)",
    ],
    gazelle = ":gazelle_bin",
)

# Aliases

alias(
    name = "swift_update_pkgs",
    actual = "//bazel/swiftpm:update_pkgs",
)

alias(
    name = "swift_update_pkgs_to_latest",
    actual = "//bazel/swiftpm:update_pkgs_to_latest",
)

alias(
    name = "gen-xcodeproj",
    actual = "//utils/bazel:xcodeproj",
)
