load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@cgrindel_bazel_starlib//bzltidy:defs.bzl", "tidy")

package(default_visibility = ["//visibility:public"])

tidy(
    name = "tidy",
    targets = [
        ":update_build_files",
    ],
)

alias(
    name = "AdaEditor",
    actual = "//Sources/AdaEditor",
)

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_skylib_gazelle_plugin//bzl",
        "@rules_swift_package_manager//gazelle",
    ],
    visibility = ["//:__subpackages__"],
)

gazelle(
    name = "update_build_files",
    data = [
        "@swift_deps_info//:swift_deps_index",
    ],
    extra_args = [
        "-swift_dependency_index=$(location @swift_deps_info//:swift_deps_index)",
    ],
    gazelle = ":gazelle_bin",
)

# Aliases

alias(
    name = "swift_update_pkgs",
    actual = "//bazel/swiftpm:update_pkgs",
)

alias(
    name = "swift_update_pkgs_to_latest",
    actual = "//bazel/swiftpm:update_pkgs_to_latest",
)

alias(
    name = "gen-xcodeproj",
    actual = "//utils/bazel:xcodeproj",
)
