###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "ada_engine",
    version = "0.1.0",
    repo_name = "AdaEngine"
)

bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "3.2.1", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.11.1", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_xcodeproj", version = "1.17.0", repo_name = "rules_xcodeproj", dev_dependency = True)
bazel_dep(name = "swift-syntax", version = "509.1.1", repo_name = "SwiftSyntax")
bazel_dep(name = "zlib", version = "1.3.1")
bazel_dep(
    name = "gazelle", 
    version = "0.35.0", 
    repo_name = "bazel_gazelle"
)
bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.5.0",
    dev_dependency = True,
)
bazel_dep(name = "swiftlint", version = "0.54.0", repo_name = "SwiftLint")
bazel_dep(name = "yams", version = "5.0.6", repo_name = "sourcekitten_com_github_jpsim_yams")
bazel_dep(name = "rules_swift_package_manager", version = "0.28.0")
bazel_dep(name = "platforms", version = "0.0.8", dev_dependency = True)

ada_deps_vendor = use_extension(
    "//bazel/vendors:repos.bzl",
    "ada_engine_vendor"
)
use_repo(
    ada_deps_vendor,
    "MSDFAtlasGen",
    "glslang",
    "SPIRV-Cross",
    "libpng",
    "miniaudio"
)
# swift_deps START
swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_file(
    deps_index = "//bazel/swiftpm:deps_index.json",
)
use_repo(
    swift_deps,
    "swiftpkg_box2d_swift",
    "swiftpkg_swift_collections",
)
# swift_deps END
