module(
    name = "ada_engine",
    version = "0.1.0",
    repo_name = "AdaEngine",
)

bazel_dep(
    name = "rules_swift",
    version = "2.8.2",
    max_compatibility_level = 2,
    repo_name = "build_bazel_rules_swift",
)
single_version_override(
    module_name = "rules_swift",
    version = "2.8.2",
)

bazel_dep(name = "cgrindel_bazel_starlib", version = "0.27.0")
bazel_dep(
    name = "rules_apple",
    version = "3.16.1",
    repo_name = "build_bazel_rules_apple",
)
bazel_dep(name = "apple_support", version = "1.17.1", repo_name = "build_bazel_apple_support")

bazel_dep(name = "rules_xcodeproj", version = "2.12.0", dev_dependency = True, repo_name = "rules_xcodeproj")

bazel_dep(name = "swift-syntax", version = "600.0.0", repo_name = "SwiftSyntax")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

bazel_dep(
    name = "bazel_skylib_gazelle_plugin",
    version = "1.7.1",
    dev_dependency = True,
)
bazel_dep(
    name = "gazelle",
    version = "0.42.0",
    dev_dependency = True,
    repo_name = "bazel_gazelle",
)

bazel_dep(name = "swiftlint", version = "0.54.0", repo_name = "SwiftLint")
bazel_dep(name = "rules_swift_package_manager", version = "1.0.0-rc3")

bazel_dep(name = "platforms", version = "0.0.11", dev_dependency = True)

swift_deps = use_extension(
    "@rules_swift_package_manager//:extensions.bzl",
    "swift_deps",
)
swift_deps.from_package(
    declare_swift_deps_info = True,
    resolved = "//:Package.resolved",
    swift = "//:Package.swift",
)
use_repo(
    swift_deps,
    "swift_deps_info",
    "swift_package",
    "swiftpkg_box2d",
    "swiftpkg_glslang",
    "swiftpkg_libpng",
    "swiftpkg_miniaudio",
    "swiftpkg_msdf_atlas_gen",
    "swiftpkg_spirv_cross",
    "swiftpkg_swift_collections",
    "swiftpkg_swift_docc_plugin",
    "swiftpkg_swift_log",
    "swiftpkg_swift_numerics",
    "swiftpkg_swift_syntax",
    "swiftpkg_yams",
)
