workspace(name = "AdaEngine")

load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")

git_repository(
    name = "rules_vulkan",
    commit = "dad3ccbb8d8471581770122062a4c2f3efb78425",
    remote = "https://github.com/AdaEngine/rules_vulkan/"
)

load("@rules_vulkan//vulkan:repositories.bzl", "vulkan_repositories")

vulkan_repositories(
    android_use_host_vulkan_sdk = True # For android, whether or not use the Vulkan headers provided by the NDK.
)