load("@build_bazel_rules_apple//apple:ios.bzl", "ios_application")
load("@build_bazel_rules_apple//apple:macos.bzl", "macos_application")
load("//utils/bazel:swift_ada_library.bzl", "swift_ada_library")

config_setting(
    name = "debug",
    values = {
        "compilation_mode": "dbg",
    },
)

config_setting(
    name = "release",
    values = {
        "compilation_mode": "fastbuild",
    },
)

swift_defines = select({
    "@platforms//os:macos": [
        "MACOS",
        "METAL",
    ],
    "@platforms//os:ios": [
        "IOS",
        "METAL",
    ],
    "@platforms//os:tvos": [
        "TVOS",
        "METAL",
    ],
    "@platforms//os:windows": [
        "WINDOWS",
        "VULKAN",
    ],
    "@platforms//os:linux": [
        "LINUX",
        "VULKAN",
    ],
    "@platforms//os:android": [
        "ANDROID",
        "VULKAN",
    ],
    "//conditions:default": [],
}) + [
    "BAZEL_BUILD",
]

ada_editor_defines = select({
    "@platforms//os:macos": [
        "EDITOR_MACOS",
    ],
    "@platforms//os:ios": [
        "EDITOR_IOS",
    ],
    "@platforms//os:tvos": [
        "EDITOR_TVOS",
    ],
    "@platforms//os:windows": [
        "EDITOR_WINDOWS",
    ],
    "@platforms//os:linux": [
        "EDITOR_LINUX",
    ],
    "@platforms//os:android": [
        "EDITOR_ANDROID",
    ],
    "//conditions:default": [],
})

swift_ada_library(
    name = "AdaEditor",
    copts = [
        "-cxx-interoperability-mode=default",
    ],
    data = [
        "Assets",
    ],
    defines = swift_defines + ada_editor_defines + select({
        ":debug": [
            "EDITOR_DEBUG",
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/AdaEngine",
        "//Sources/Math",
    ],
)

# Platform specific builds

macos_application(
    name = "AdaEditor-macos",
    bundle_id = "org.adaengine.AdaEditor-macos",
    infoplists = ["Platforms/macOS/Info.plist"],
    minimum_os_version = "14.0",
    visibility = ["//visibility:public"],
    deps = [
        ":AdaEditor",
    ],
)

ios_application(
    name = "AdaEditor-ios",
    bundle_id = "org.adaengine.AdaEditor-ios",
    families = [
        "iphone",
        "ipad",
    ],
    infoplists = ["Platforms/iOS/Info.plist"],
    minimum_os_version = "16.0",
    visibility = ["//visibility:public"],
    deps = [
        ":AdaEditor",
    ],
)
