load("//utils/bazel:swift_ada_library.bzl", "swift_ada_library")

swift_defines = select({
    "@platforms//os:macos": [
        "MACOS",
        "METAL",
    ],
    "@platforms//os:ios": [
        "IOS",
        "METAL",
    ],
    "@platforms//os:tvos": [
        "TVOS",
        "METAL",
    ],
    "@platforms//os:windows": [
        "WINDOWS",
        "VULKAN",
    ],
    "@platforms//os:linux": [
        "LINUX",
        "VULKAN",
    ],
    "@platforms//os:android": [
        "ANDROID",
        "VULKAN",
    ],
    "//conditions:default": [],
}) + [
    "BAZEL_BUILD",
]

ada_engine_deps = [
    "@swiftpkg_swift_collections//:Collections",
    "@swiftpkg_swift_collections//:BitCollections",
    "@swiftpkg_swift_log//:Logging",
    "@swiftpkg_yams//:Yams",
    "@swiftpkg_miniaudio//:miniaudio",
    "@swiftpkg_box2d//:box2d",
    "//Modules/libpng:libpng",
    "@swiftpkg_spirv_cross//:SPIRV-Cross",
    "//Sources/AtlasFontGenerator:AtlasFontGenerator",
    "//Sources/SPIRVCompiler",
    "//Sources/Math",
    "//Sources/AdaUtils",
    "//Sources/AdaECS",
]

swift_ada_library(
    name = "AdaEngine",
    data = [
        "Assets/Fonts",
        "Assets/Shaders",
    ],
    defines = swift_defines,
    plugins = ["//Sources/AdaEngineMacros"],
    visibility = ["//visibility:public"],
    deps = ada_engine_deps,
)
