load("//utils/bazel:swift_ada_library.bzl", "swift_ada_library")

swift_defines = select({
    "@platforms//os:macos": [
        "MACOS",
        "METAL",
    ],
    "@platforms//os:ios": [
        "IOS",
        "METAL",
    ],
    "@platforms//os:tvos": [
        "TVOS",
        "METAL",
    ],
    "@platforms//os:windows": [
        "WINDOWS",
        "VULKAN",
    ],
    "@platforms//os:linux": [
        "LINUX",
        "VULKAN",
    ],
    "@platforms//os:android": [
        "ANDROID",
        "VULKAN",
    ],
    "//conditions:default": [],
}) + [
    "BAZEL_BUILD",
]

ada_engine_deps = [
    "@swiftpkg_swift_collections//:Collections",
    "@swiftpkg_swift_collections//:BitCollections",
    "@swiftpkg_swift_log//:Logging",
    "@swiftpkg_yams//:Yams",
    "//Modules/box2d:box2d",
    "//Modules/SPIRV-Cross:SPIRV-Cross",
    "//Modules/glslang:glslang",
    "//Modules/libpng:libpng",
    "//Modules/msdf-atlas-gen:msdf-atlas-gen",
    "//Modules/miniaudio:miniaudio",
    "//Sources/AtlasFontGenerator:AtlasFontGenerator",
    "//Sources/SPIRVCompiler",
    "//Sources/Math",
    "//Sources/AdaUtils",
    "//Sources/AdaECS",
]

swift_ada_library(
    name = "AdaEngine",
    data = [
        "Assets/Fonts",
        "Assets/Shaders",
    ],
    defines = swift_defines,
    plugins = ["//Sources/AdaEngineMacros"],
    visibility = ["//visibility:public"],
    deps = ada_engine_deps,
)
