load("@build_bazel_rules_swift//swift:swift.bzl", "swift_compiler_plugin")

swift_compiler_plugin(
    name = "AdaEngineMacros",
    srcs = glob(["*.swift"]),
    module_name = "AdaEngineMacros",
    visibility = ["//visibility:public"],
    deps = [
        "@SwiftSyntax",
        "@SwiftSyntax//:SwiftCompilerPlugin",
        "@SwiftSyntax//:SwiftSyntaxMacros",
    ],
)