# load("//utils/bazel:cc_ada_library.bzl", "cc_ada_library")
load("@build_bazel_rules_swift//swift:swift_interop_hint.bzl", "swift_interop_hint")

cc_library(
    name = "AtlasFontGenerator",
    srcs = glob([
        "**/*.cpp",
    ]),
    hdrs = glob([
        "**/*.hpp",
        "**/*.h",
    ]),
    deps = [
        "@swiftpkg_msdf_atlas_gen//:MSDFAtlasGen",
        # "//Modules/msdf-atlas-gen:msdf-atlas-gen",
    ],
    aspect_hints = ["AtlasFontGenerator_interop"],
    visibility = ["//visibility:public"]
)

swift_interop_hint(
    name = "AtlasFontGenerator_interop",
    module_name = "AtlasFontGenerator",
    module_map = "module.modulemap",
    visibility = ["//visibility:public"]
)
