load("@build_bazel_rules_swift//swift:swift.bzl", "swift_c_module")

name = "CVulkan"
cxx_lib_name = "_{}_c_lib".format(name)

VULKAN_LINK_OPTS = select({
    "@platforms//os:macos": [
        "-rpath",
        "/usr/local/lib"
    ],
    "@platforms//os:ios": [
        "-rpath",
        "/usr/local/lib"
    ],
    "@platforms//os:tvos": [
        "-rpath",
        "/usr/local/lib"
    ],
    "@platforms//os:windows": [],
    "@platforms//os:linux": [
        "-rpath",
        "/usr/local/lib"
    ],
    "@platforms//os:android": [
        "-rpath",
        "/usr/local/lib"
    ],
    "//conditions:default": []
})


cc_library(
    name = cxx_lib_name,
    hdrs = ["cvulkan.h"],
    deps = [
        "@rules_vulkan//vulkan:vulkan_cc_library",
    ],
    linkopts = VULKAN_LINK_OPTS,
    defines = select({
        "@platforms//os:macos": [
            "VK_USE_PLATFORM_MACOS_MVK",
            "VK_USE_PLATFORM_METAL_EXT"
        ],
        "@platforms//os:ios": [
            "VK_USE_PLATFORM_IOS_MVK",
            "VK_USE_PLATFORM_METAL_EXT"
        ],
        "@platforms//os:tvos": [
            "VK_USE_PLATFORM_IOS_MVK",
            "VK_USE_PLATFORM_METAL_EXT"
        ],
        "@platforms//os:windows": [
            "VK_USE_PLATFORM_WIN32_KHR"
        ],
        "@platforms//os:linux": [
            "VK_USE_PLATFORM_XLIB_KHR"
        ],
        "@platforms//os:android": [
            "VK_USE_PLATFORM_ANDROID_KHR"
        ],
        "//conditions:default": []
    }),
    visibility = ["//:__subpackages__"]
)

swift_c_module(
    name = name,
    module_map = "module.modulemap",
    module_name = name,
    deps = [cxx_lib_name],
    visibility = ["//visibility:public"]
)