load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "Math",
    srcs = [
        "Angle.swift",
        "Math.swift",
        "PointInt.swift",
        "Quat.swift",
        "Ray.swift",
        "Rect.swift",
        "Size.swift",
        "SizeInt.swift",
        "Transform2D.swift",
        "Transform3D.swift",
        "Vectors/Vector2.swift",
        "Vectors/Vector3.swift",
        "Vectors/Vector4.swift",
    ],
    module_name = "Math",
    visibility = ["//visibility:public"],
)
