load("@build_bazel_rules_swift//swift:swift_interop_hint.bzl", "swift_interop_hint")

cc_library(
    name = "box2d",
    srcs = glob(["src/*.c"]),
    hdrs = glob([
        "src/*.h",
        "include/box2d/*.h",
    ]),
    includes = ["include"],
    visibility = ["//visibility:public"],
    aspect_hints = ["box2d_cc"],
)

swift_interop_hint(
    name = "box2d_cc",
    module_name = "box2d",
    visibility = ["//visibility:public"]
)