load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "AdaECSTests",
    srcs = [
        "ChunkTests.swift",
        "ConcurrencyTests.swift",
        "Misc.swift",
        "QueryTests.swift",
        "ShedulersTests.swift",
        "SystemMacroTests.swift",
        "WorldTests.swift",
    ],
    module_name = "AdaECSTests",
    visibility = ["//visibility:public"],
    deps = ["//Sources/AdaECS"],
)
