load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "AdaEngineTests",
    srcs = [
        "FixedTimestepTests.swift",
        "Physics2DTests.swift",
    ],
    module_name = "AdaEngineTests",
    visibility = ["//visibility:public"],
    deps = ["//Sources/Math"],
)
