load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "AdaUITests",
    srcs = [
        "TestApplication.swift",
        "Helpers/ViewTester.swift",
        "MacOSTextInputFilterTests.swift",
        "TextFieldTests.swift",
        "UIWindowInputRoutingTests.swift",
        "ViewHitTests.swift",
        "ViewModifiersTests.swift",
        "ViewStoragesTests.swift",
        "ViewVisibilityTest.swift",
    ],
    module_name = "AdaUITests",
    visibility = ["//visibility:public"],
    deps = ["//Sources/Math"],
)
