load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MathTests",
    srcs = [
        "Transform2DTests.swift",
        "Transform3DTests.swift",
        "Utils.swift",
    ],
    module_name = "MathTests",
    visibility = ["//visibility:public"],
    deps = [
        "//Sources/Math",
        "@swiftpkg_swift_numerics//:Numerics",
    ],
)
