load(
    "@rules_xcodeproj//xcodeproj:defs.bzl",
    "xcode_schemes",
    "xcodeproj",
    "top_level_target"
)

# Xcode gen

xcodeproj(
    name = "xcodeproj",
    install_directory = "",
    project_name = "AdaEngine",
    schemes = [
        xcode_schemes.scheme(
            name = "AdaEditor macOS",
            launch_action = xcode_schemes.launch_action(
                "//:AdaEditor-macos",
                args = [],
            ),
            test_action = xcode_schemes.test_action([
                "//:AdaEngineTests",
                "//:MathTests"
            ]),
        ),
        xcode_schemes.scheme(
            name = "AdaEditor iOS",
            launch_action = xcode_schemes.launch_action(
                "//:AdaEditor-ios",
                args = [],
            ),
            test_action = xcode_schemes.test_action([
                "//:AdaEngineTests",
                "//:MathTests"
            ]),
        ),
    ],
    tags = ["manual"],
    top_level_targets = [
        "//:AdaEditor-macos",
        top_level_target(
            "//:AdaEditor-ios", 
            target_environments = ["simulator"]
        ),
        "//:AdaEngineTests",
        "//:MathTests"
    ],
)